# end2end-zadatak

./: .env.example  Cargo.toml  docker-compose.yml
bins/monolith/: Cargo.toml
bins/monolith/src/: main.rs  web.rs
bins/monolith/src/application/: configure.rs  mod.rs
bins/monolith/src/application/employee/: mod.rs
bins/monolith/src/application/employee/create/: contract.rs  data.rs  domain.rs  http.rs  infrastructure.rs  setup.rs
bins/monolith/src/application/employee/create/test/: mod.rs
bins/monolith/src/application/employee/edit/: contract.rs  data.rs  domain.rs  http.rs  infrastructure.rs  setup.rs
bins/monolith/src/application/employee/get/: contract.rs  mod.rs  setup.rs
bins/monolith/src/application/employee/get/all/: contract.rs  data.rs  domain.rs  http.rs  infrastructure.rs  mod.rs  setup.rs
bins/monolith/src/application/employee/get/info/: domain.rs  http.rs  infrastructure.rs  setup.rs
libs/error/src/: lib.rs
libs/infrastructure/src/: db.rs  schema.rs
libs/support/: Cargo.toml
libs/support/src/: lib.rs
libs/support/src/helpers/: mod.rs
libs/support/src/store/models/: employee.rs
migrations/2023-09-14-102416_create_employees/: up.sql
