[package]
name = "monolith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
config = { path = "../../libs/config" }
error = { path = "../../libs/error" }
infrastructure = { path = "../../libs/infrastructure" }
support = { path = "../../libs/support" }

# Helpers
serde = "1.0.157"
serde_json = "1.0.94"
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.17"
uuid = { version = "1.3.0", features = ["v4"] }
validr = "0.3.1"
futures = "0.3.28"
futures-util = "0.3.28"

# Http
actix-web = "4.3.1"
actix-cors = "0.6.4"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }

# Database
diesel = { version = "2.0.3", features = [
  "chrono",
  "postgres",
  "r2d2",
  "serde_json",
  "64-column-tables",
] }
r2d2 = "0.8.10"
length_aware_paginator = "1.0.0"

# Codegen
async-trait = "0.1.67"
mockall = "0.11.4"